Fix [Jobs][Functions] Long value overflows container

--- a/src/elements/FunctionsPanelGeneral/functionsPanelGeneral.scss
+++ b/src/elements/FunctionsPanelGeneral/functionsPanelGeneral.scss
@@ -11,6 +11,14 @@
     span {
       font-weight: bold;
     }
+
+    .name {
+      max-width: 70%;
+    }
+
+    .tag {
+      max-width: 10%;
+    }
   }
 
   .description {
